--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,10 @@
 extensions
 application/databases/Ayoola/Object/
 application/databases/Application/Log/
+application/databases/Ayoola/Doc/table.xml
+application/databases/Ayoola/Extension/Import/table.xml
+application/databases/PageCarton/Cron/Run/table.xml
+application/documents/public/2020/06/06/native-app-tar-gz.gz
+application/modules/NativeApp.php
+application/modules/NativeApp
+application/databases/NativeApp/Authenticate/table.xml
