--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ application/modules/NativeApp
 application/databases/NativeApp/Authenticate/table.xml
 application/databases/TaxiApp/booking.xml
 application/databases/Application/notification.xml
+application/databases/Ayoola/Access/localuser.xml
