--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ application/databases/Application/notification.xml
 application/databases/Ayoola/Access/localuser.xml
 application/databases/Places/table.xml
 application/databases/Application/settings.xml
+application/databases/NativeApp/Authenticate/otptable.xml
